# TDArchitecture

./: .gitignore  Dockerfile  README.md  config.py  conftest.py  db_tables.py  docker-compose.yml  flask_app.py  model.py  orm.py  pyproject.toml  repository.py  services.py  test_allocate.py  test_batches.py  test_model.py  test_orm.py  test_repository.py
src/allocation/: config.py
src/allocation/adapters/: email.py  orm.py  redis_eventpublisher.py  repository.py
src/allocation/domain/: commands.py  events.py  exceptions.py  model.py
src/allocation/entrypoints/: event_channels.py  flask_app.py  redis_eventconsumer.py
src/allocation/service_layer/: handlers.py  message_bus.py  services.py  unit_of_work.py
tests/: conftest.py  random_refs.py  test_allocate.py  test_api.py  test_batches.py  test_services.py
tests/e2e/: api_client.py  redis_client.py  test_api.py  test_external_events.py
tests/integration/: test_orm.py  test_repository.py  test_uow.py
tests/unit/: test_allocate.py  test_batches.py  test_handlers.py  test_product.py  test_services.py
