[project]
name = "allocation"
version = "0.1.0"
description = "Example application code for the python architecture book"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "sqlalchemy",
    "flask",
    "psycopg2-binary",
    "redis",
    "pytest",
    "pytest-icdiff",
    "mypy",
    "pylint",
    "requests",
    "tenacity"
]